 - Fixed: Display errors in device tree, commands not appearing in sensor or switch details (MODELER-500)
 - Add/review unit tests around UI components equality and controller/panel XML generation (MODELER-496)
 - Adapt unit tests to pass with changes made in MODELER-500 (MODELER-501)
 - Fixed: When using arrow keys to move selection, browser window is scrolled first (MODELER-309)

Pro 1.0.13
==========

Fixes:
 - Fixed tests (testng) exection from ant script (MODELER-438)
 - Finish review of methods for DTO <-> Model objects conversion (MODELER-405)
 - Refactor walking the UIComponent objects within a panels collection (MODELER-437)
 - Fixed: walking functionality from MODELER-437 iterates multiple times over the same component (MODELER-497)
 - Implement unit tests proving MODELER-497 (MODELER-498)
 - Define serialVersionUID on DeviceMacro to fix de-serialization issues (MODELER-535)

New features:
 - Update OR logo to current version (MODELER-533)

Pro 1.0.12
==========

Fixes:
 - Edit of custom panel complains of duplicate name (MODELER-518)
 - Creating slider from within New Device dialog doesn't allow
   the creation of passive slider (MODELER-523)
 - Impossible to edit custom panel if not all attributes
   are defined in the first place (MODELER-527)

New features:
  - Make text box for rules bigger and not wrap its text (MODELER-526)

Pro 1.0.11
==========

Fixes:
 - Logout not working under Firefox (MODELER-507)
 - Designer can't handle multiple login with the same account (MODELER-508)

New features:
 - Support new features in Marantz AVR protocol: multiple-zone support and additional commandsr (MODELER-516)
 - Update DateTime protocol configuration (MODELER-517)
 - Add ip and port parameters to RRD4J graph protocol (MODELER-520)
 - Add controller configuration parameters for Samsung TV (MODELER-521)
 - Have empty option for commands in protocol definition
   with allowBlank constraint true when using list of options (MODELER-522)

Pro 1.0.10
==========
